unpackaged/main/default/objects/abacus__Ledger_Entry__c/abacus__Ledger_Entry__c.object-meta.xml
<CustomObject>
    <description>A record of all Pledges and Payments for accounting purposes that can't be edited or deleted. Ledger Entry types include: Allocation, Transaction and Payment.</description>
    <label>Ledger Entry</label>
    <nameField>
        <displayFormat>LEDG-{00000000}</displayFormat>
        <label>Ledger Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>