unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Accounting Period that this Ledger Entry belongs to. Requires an Accounting Subledger Growth Edition license.</description>
    <inlineHelpText>The Accounting Period that this Ledger Entry belongs to.</inlineHelpText>
    <label>Accounting Period</label>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>