unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Accounting_Set__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Set__c</fullName>
    <description>Your default or customized set of fields that generate Ledger Entries for your org.</description>
    <externalId>true</externalId>
    <inlineHelpText>Accounting Sets are your own customized combinations of fields or objects that generate Ledger Entries, and define your financial data.</inlineHelpText>
    <label>Accounting Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>