unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Adjustment__c.field-meta.xml
<CustomField>
    <fullName>abacus__Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically checked when a Ledger Entry is created due to a change that happened after initial Payment creation.</description>
    <inlineHelpText>If checked, this Ledger Entry was created due to a change that happened after initial Payment creation.</inlineHelpText>
    <label>Adjustment?</label>
    <type>Checkbox</type>
</CustomField>