unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Amount__c.field-meta.xml
<CustomField>
    <fullName>abacus__Amount__c</fullName>
    <description>The Ledger Entry amount.</description>
    <inlineHelpText>The Ledger Entry amount.</inlineHelpText>
    <label>Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>