unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Check_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>abacus__Check_Reference_Number__c</fullName>
    <description>The reference number (for example, check number) associated with the Payment for this Ledger Entry.</description>
    <inlineHelpText>The reference number (for example, check number) associated with the Payment for this Ledger Entry.</inlineHelpText>
    <label>Check/Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>