unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Comments__c.field-meta.xml
<CustomField>
    <fullName>abacus__Comments__c</fullName>
    <description>Comments about the Ledger Entry.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>