unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>abacus__Debit_Amount__c</fullName>
    <description>The transaction amount, only for debit Ledger Entries. This functionality is for Growth subscriptions only.</description>
    <inlineHelpText>The transaction amount, only for debit Ledger Entries. This functionality is for Growth subscriptions only.</inlineHelpText>
    <label>Debit Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>