unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Debit_Credit__c.field-meta.xml
<CustomField>
    <fullName>abacus__Debit_Credit__c</fullName>
    <description>Indicates whether this Ledger Entry is a Debit or Credit. This functionality is for Growth subscriptions only.</description>
    <inlineHelpText>Indicates whether this Ledger Entry is a Debit or Credit. This functionality is for Growth subscriptions only.</inlineHelpText>
    <label>Debit/Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>