unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>abacus__Due_Date__c</fullName>
    <description>The date that the revenue is expected to arrive. Only used on Allocation Ledger Entries.</description>
    <inlineHelpText>The date that the revenue is expected to arrive.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>