unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Fulfills_A_Pledge__c.field-meta.xml
<CustomField>
    <fullName>abacus__Fulfills_A_Pledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically checked when a Payment Ledger Entry is created from a Payment that was not marked Paid when created.</description>
    <inlineHelpText>If checked, this Ledger Entry's related Payment was pledged before it was paid (it wasn't set as Paid when created).</inlineHelpText>
    <label>Fulfills an Accrual</label>
    <type>Checkbox</type>
</CustomField>