unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__General_Accounting_Unit__c.field-meta.xml
<CustomField>
    <fullName>abacus__General_Accounting_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The general accounting unit to which this revenue is applied. Only set on Allocation and Payment Ledger Entries.</description>
    <inlineHelpText>The general accounting unit to which this revenue is applied.</inlineHelpText>
    <label>General Accounting Unit</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>