unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__GL_Code__c.field-meta.xml
<CustomField>
    <fullName>abacus__GL_Code__c</fullName>
    <description>The general ledger code for this Ledger Entry. Corresponds to similar fields in integrated accounting software. Values differ based on the Ledger Entry’s Type.</description>
    <inlineHelpText>The general ledger code for this Ledger Entry. Corresponds to similar fields in integrated accounting software. Values differ based on the Ledger Entry’s Type.</inlineHelpText>
    <label>GL Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>