unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Historical_Ledger_Entry__c.field-meta.xml
<CustomField>
    <fullName>abacus__Historical_Ledger_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this Ledger Entry has been overridden by more recent Ledger Entries, and is excluded from future accounting calculations</description>
    <inlineHelpText>If checked, this Ledger Entry is excluded from new calculations because it has been replaced by one or more later Ledger Entries.</inlineHelpText>
    <label>Historical Ledger Entry</label>
    <type>Checkbox</type>
</CustomField>