unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>abacus__Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Opportunity that this Ledger Entry is related to.</description>
    <inlineHelpText>The Opportunity that this Ledger Entry is related to.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>