unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Payment__c.field-meta.xml
<CustomField>
    <fullName>abacus__Payment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Payment that this Ledger Entry is related to.</description>
    <inlineHelpText>The Payment that this Ledger Entry is related to.</inlineHelpText>
    <label>Payment</label>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>