unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>abacus__Payment_Date__c</fullName>
    <description>The date that the related Payment was paid. Automatically set on Transaction and Payment Ledger Entries.</description>
    <inlineHelpText>The date that the related Payment was paid.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>