unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>abacus__Payment_Method__c</fullName>
    <description>The method of payment for this Ledger Entry.</description>
    <inlineHelpText>The method of payment for this Ledger Entry.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>In-Kind</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>