unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>abacus__Posting_Status__c</fullName>
    <description>Indicates where the Ledger Entry is in the posting process</description>
    <inlineHelpText>Use this field to select or change the approval status for this ledger entry.</inlineHelpText>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entered</fullName>
                <default>true</default>
                <label>Entered</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>