unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Related_Ledger_Entry__c.field-meta.xml
<CustomField>
    <fullName>abacus__Related_Ledger_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Ledger Entries always relate to their corresponding Allocation Ledger Entries. Ledger Entry corrections always relate to the corresponding record of the same type. For example, Transaction Correction Ledger Entries always relate to the corresponding Transaction that's being corrected.</description>
    <inlineHelpText>Standard Payment Ledger Entries relate to their corresponding Transaction Ledger Entries. In contrast, Ledger Entries that are corrections instead relate to the corrected record.</inlineHelpText>
    <label>Related Ledger Entry</label>
    <referenceTo>abacus__Ledger_Entry__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>