unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Secondary_Allocation__c.field-meta.xml
<CustomField>
    <fullName>abacus__Secondary_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this Ledger Entry is only used for balancing debits and credits. Accounting Subledger's jobs and calculations always ignore this Ledger Entry. This functionality is for Growth subscriptions only.</description>
    <inlineHelpText>Indicates this Ledger Entry is only used for balancing debits and credits. Accounting Subledger's jobs and calculations always ignore this Ledger Entry. This functionality is for Growth subscriptions only.</inlineHelpText>
    <label>Secondary</label>
    <type>Checkbox</type>
</CustomField>