unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Secondary_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>abacus__Secondary_Object_Id__c</fullName>
    <description>The ID of the secondary object record as indicated in the accounting set that this record was created with.</description>
    <externalId>true</externalId>
    <inlineHelpText>The ID of the secondary object record as indicated in the accounting set that this record was created with.</inlineHelpText>
    <label>Secondary Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>