unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>abacus__Transaction_Date__c</fullName>
    <description>For Transaction and Payment Ledger Entries, the date that the payment is made or reversed. For Allocation Ledger Entries, the date that the gift was pledged.</description>
    <inlineHelpText>For Transaction and Payment Ledger Entries, the date that the payment is made or reversed. For Allocation Ledger Entries, the date that the gift was pledged.</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>