unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Type__c.field-meta.xml
<CustomField>
    <fullName>abacus__Type__c</fullName>
    <description>The type of Ledger Entry: Allocation, Payment, or Transaction.</description>
    <inlineHelpText>The type of Ledger Entry: Allocation, Payment, or Transaction.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Payment Transaction</fullName>
                <isActive>false</isActive>
                <label>Payment Transaction</label>
            </value>
            <value>
                <fullName>Pledge Allocation</fullName>
                <isActive>false</isActive>
                <label>Pledge Allocation</label>
            </value>
            <value>
                <fullName>Pledge Allocation Payment</fullName>
                <isActive>false</isActive>
                <label>Pledge Allocation Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>