unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Who_Id__c.field-meta.xml
<CustomField>
    <fullName>abacus__Who_Id__c</fullName>
    <description>The person or account related to this Ledger Entry</description>
    <inlineHelpText>The person or account related to this Ledger Entry</inlineHelpText>
    <label>Who Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>