unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/abacus__Written_Off__c.field-meta.xml
<CustomField>
    <fullName>abacus__Written_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a pledged amount will not be fulfilled. This field is selected when the Payment is written off, along with its related Transaction and Payment Ledger Entries.</description>
    <inlineHelpText>Indicates that a pledged amount will not be fulfilled. This field is selected when the Payment is written off, along with its related Transaction and Payment Ledger Entries.</inlineHelpText>
    <label>Written Off</label>
    <type>Checkbox</type>
</CustomField>