unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Contact_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_ID__c</fullName>
    <label>Contact Record ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>