unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <label>Currency Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>