unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Donor_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Change_Type__c</fullName>
    <label>Donor Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>