unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>