unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/GAU_Allocation_Restriction__c.field-meta.xml
<CustomField>
    <fullName>GAU_Allocation_Restriction__c</fullName>
    <label>GAU Allocation Restriction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>