unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Grant_Segment__c.field-meta.xml
<CustomField>
    <fullName>Grant_Segment__c</fullName>
    <label>Grant Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>