unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Manual_Ledger_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Ledger_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Ledger Entry</label>
    <type>Checkbox</type>
</CustomField>