unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NetSuite_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Bank_Account__c</fullName>
    <label>NetSuite Bank Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>