unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NetSuite_Cash_Sale_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Cash_Sale_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite - Cash Sale ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>