unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NetSuite_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>