unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NetSuite_Grant__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Grant__c</fullName>
    <label>NetSuite - Grant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>