unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NetSuite_Invoice__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice__c</fullName>
    <label>NetSuite - Invoice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>