unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NetSuite_Payment__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Payment__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>NetSuite - Payment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>