unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Netsuite_Record__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Record__c</fullName>
    <label>Netsuite Record</label>
    <length>25</length>
    <type>Text</type>
</CustomField>