unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Cash_Sale_Integration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>NS_Cash_Sale_Integration_DateTime__c</fullName>
    <label>NS Cash Sale Integration DateTime</label>
    <type>DateTime</type>
</CustomField>