unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Cash_Sale_Integration_Status_code__c.field-meta.xml
<CustomField>
    <fullName>NS_Cash_Sale_Integration_Status_code__c</fullName>
    <label>NS Cash Sale Integration Status code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>