unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Payment_Integration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Integration_DateTime__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>NS Payment Integration DateTime</label>
    <type>DateTime</type>
</CustomField>