unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Payment_Integration_Status_Msg__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Integration_Status_Msg__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>NS Payment Integration Status Msg</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>