unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Pledge_Order_Integration_Status_code__c.field-meta.xml
<CustomField>
    <fullName>NS_Pledge_Order_Integration_Status_code__c</fullName>
    <label>NS Pledge Order Integration Status code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>