unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Projection_Integration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>NS_Projection_Integration_DateTime__c</fullName>
    <label>NS Projection Integration DateTime</label>
    <type>DateTime</type>
</CustomField>