unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Reversal_J_E_Integration_Status_code__c.field-meta.xml
<CustomField>
    <fullName>NS_Reversal_J_E_Integration_Status_code__c</fullName>
    <label>NS Reversal J.E. Integration Status code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>