unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/NS_Reversal_J_E_Integration_Status_Msg__c.field-meta.xml
<CustomField>
    <fullName>NS_Reversal_J_E_Integration_Status_Msg__c</fullName>
    <label>NS Reversal J.E. Integration Status Msg</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>