unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Opportunity_Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grant_Name__c</fullName>
    <label>Opportunity Grant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>