unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Opportunity_Natural_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Natural_Code__c</fullName>
    <label>Opportunity Natural Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>