unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Opportunity_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_ID__c</fullName>
    <formula>IF( 
   NOT(ISBLANK(abacus__Opportunity__c)), 
    abacus__Opportunity__c ,
   IF(
      NOT(ISBLANK( abacus__Payment__c )),
      abacus__Payment__r.npe01__Opportunity__c ,
      ""
      )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record ID</label>
    <type>Text</type>
</CustomField>