unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/OpportunityNaturalCode__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNaturalCode__c</fullName>
    <formula>abacus__Opportunity__r.Natural_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEL_Opportunity Natural Code</label>
    <type>Text</type>
</CustomField>