unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Payment_Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency_Type__c</fullName>
    <label>Opportunity Currency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>