unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Payment_Natural_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Natural_Code__c</fullName>
    <label>Payment Natural Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>