unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/PaymentNaturalCode__c.field-meta.xml
<CustomField>
    <fullName>PaymentNaturalCode__c</fullName>
    <formula>abacus__Payment__r.Pledge_Inst_Receivable_Natural_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Natural Code</label>
    <type>Text</type>
</CustomField>